gitops/applications/teddycloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-teddycloud
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
