gitops/applications/teddycloud/deployment-mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: app-teddycloud
  labels:
    app: mosquitto
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      serviceAccountName: mosquitto
      containers:
      - name: mosquitto
        image: docker.io/eclipse-mosquitto:2
        imagePullPolicy: IfNotPresent
        ports:
        - name: mqtt
          containerPort: 1883
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1883
          runAsGroup: 1883
          capabilities:
            drop:
            - ALL
        readinessProbe:
          tcpSocket:
            port: mqtt
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: mqtt
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
