gitops/applications/teddycloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teddycloud
  namespace: app-teddycloud
  labels:
    app: teddycloud
spec:
  selector:
    app: teddycloud
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: box-tls
    port: 443
    targetPort: box-tls
    protocol: TCP
  - name: https-web
    port: 8443
    targetPort: https-web
    protocol: TCP
